--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    android:orientation="vertical"
+    android:background="@color/YP_Blue"
+    >
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/app_name"
+        android:textSize="24sp"
+        android:gravity="start">
+    </TextView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/button_margin"
+            android:padding="@dimen/button_padding"
+            android:layout_weight="1"
+            android:text="@string/search_text"
+            android:textAllCaps="false"
+            android:textColor="@color/YP_Black"
+            app:backgroundTint="@color/YP_White"
+            app:cornerRadius="@dimen/button_cornerRadius"
+            app:icon="@drawable/search_icon"
+            app:iconGravity="textStart"
+            app:iconTint="@color/YP_Black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/button_margin"
+            android:padding="@dimen/button_padding"
+            android:layout_weight="1"
+            android:text="@string/medialibrary_text"
+            android:textAllCaps="false"
+            android:textColor="@color/YP_Black"
+            app:backgroundTint="@color/YP_White"
+            app:cornerRadius="@dimen/button_cornerRadius"
+            app:icon="@drawable/medialibrary_icon"
+            app:iconGravity="textStart"
+            app:iconTint="@color/YP_Black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/button_margin"
+            android:padding="@dimen/button_padding"
+            android:layout_weight="1"
+            android:text="@string/settings_text"
+            android:textAllCaps="false"
+            android:textColor="@color/YP_Black"
+            app:backgroundTint="@color/YP_White"
+            app:cornerRadius="@dimen/button_cornerRadius"
+            app:icon="@drawable/settincgs_icon"
+            app:iconGravity="textStart"
+            app:iconTint="@color/YP_Black" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
