--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,16 +11,77 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginHorizontal="16dp"
+        android:minHeight="48dp"
         android:layout_marginTop="16dp"
+        android:paddingHorizontal="16dp"
+        android:drawablePadding="24dp"
+        android:gravity="center_vertical"
         android:text="@string/settings_text"
         android:textSize="24sp"
-        android:gravity="center"
-        app:icon="@drawable/back_icon"
-        app:iconGravity="textStart"
-        app:iconPadding="16dp"
-        app:iconTint="@color/black">
-    </TextView>
+        app:drawableStartCompat="@drawable/back_icon"></TextView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingHorizontal="16dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:minHeight="54dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:minHeight="54dp"
+                android:text="@string/darktheme_text"
+                android:textSize="@dimen/setting_text_size"
+                android:gravity="center_vertical"
+                >
+            </TextView>
+
+            <Switch
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3">
+            </Switch>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/share_text"
+            android:textSize="@dimen/setting_text_size"
+            android:gravity="center_vertical"
+            android:layout_marginVertical="16dp"
+            app:drawableEndCompat="@drawable/shareapp_icon"></TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/techsupport_text"
+            android:textSize="@dimen/setting_text_size"
+            android:gravity="center_vertical"
+            android:layout_marginVertical="16dp"
+            app:drawableEndCompat="@drawable/techsupport_icon"></TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/license_text"
+            android:textSize="@dimen/setting_text_size"
+            android:gravity="center_vertical"
+            android:layout_marginVertical="16dp"
+            app:drawableEndCompat="@drawable/arrowright_icon"></TextView>
+
+    </LinearLayout>
 
 </LinearLayout>
