--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="button_cornerRadius">16dp</dimen>
     <dimen name="button_margin">16dp</dimen>
     <dimen name="button_padding">16dp</dimen>
+    <dimen name="setting_text_size">18dp</dimen>
 </resources>
