--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,12 @@
     >
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="36dp"
+        android:minHeight="36dp"
+        android:layout_marginHorizontal="@dimen/button_margin"
+        android:layout_marginTop="@dimen/button_margin"
         android:text="@string/app_name"
-        android:textSize="24sp"
+        android:textSize="@dimen/headtext_size"
         android:gravity="start">
     </TextView>
 
