--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,15 +10,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="@dimen/textview_margin"
         android:minHeight="48dp"
-        android:layout_marginTop="16dp"
-        android:paddingHorizontal="16dp"
-        android:drawablePadding="24dp"
+        android:layout_marginTop="@dimen/textview_margin"
+        android:paddingHorizontal="@dimen/textview_margin"
+        android:drawablePadding="16dp"
         android:gravity="center_vertical"
         android:text="@string/settings_text"
-        android:textSize="24sp"
-        app:drawableStartCompat="@drawable/back_icon"></TextView>
+        android:textSize="@dimen/headtext_size"
+        app:drawableStartCompat="@drawable/back_icon">
+    </TextView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +31,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:minHeight="54dp"
             android:layout_weight="1">
 
             <TextView
@@ -59,8 +59,9 @@
             android:text="@string/share_text"
             android:textSize="@dimen/setting_text_size"
             android:gravity="center_vertical"
-            android:layout_marginVertical="16dp"
-            app:drawableEndCompat="@drawable/shareapp_icon"></TextView>
+            android:layout_marginVertical="@dimen/textview_margin"
+            app:drawableEndCompat="@drawable/shareapp_icon">
+        </TextView>
 
         <TextView
             android:layout_width="match_parent"
@@ -69,8 +70,9 @@
             android:text="@string/techsupport_text"
             android:textSize="@dimen/setting_text_size"
             android:gravity="center_vertical"
-            android:layout_marginVertical="16dp"
-            app:drawableEndCompat="@drawable/techsupport_icon"></TextView>
+            android:layout_marginVertical="@dimen/textview_margin"
+            app:drawableEndCompat="@drawable/techsupport_icon">
+        </TextView>
 
         <TextView
             android:layout_width="match_parent"
@@ -79,8 +81,9 @@
             android:text="@string/license_text"
             android:textSize="@dimen/setting_text_size"
             android:gravity="center_vertical"
-            android:layout_marginVertical="16dp"
-            app:drawableEndCompat="@drawable/arrowright_icon"></TextView>
+            android:layout_marginVertical="@dimen/textview_margin"
+            app:drawableEndCompat="@drawable/arrowright_icon">
+        </TextView>
 
     </LinearLayout>
 
