--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         >
 
         <Button
+            android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/button_margin"
@@ -39,6 +40,7 @@
             app:iconTint="@color/YP_Black" />
 
         <Button
+            android:id="@+id/medialibrary"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/button_margin"
@@ -54,6 +56,7 @@
             app:iconTint="@color/YP_Black" />
 
         <Button
+            android:id="@+id/settings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/button_margin"
