--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="YP_White">#FFFFFFFF</color>
     <color name="YP_Black">#1A1B22</color>
     <color name="YP_Blue">#3772E7</color>
+    <color name="YP_Grey">#AEAFB4</color>>
 </resources>
