--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,9 @@
     <color name="YP_White">#FFFFFFFF</color>
     <color name="YP_Black">#1A1B22</color>
     <color name="YP_Blue">#3772E7</color>
+    <color name="YP_BlueLight">#9FBBF3</color>
     <color name="YP_Grey">#AEAFB4</color>>
+    <color name="YP_GreyLight">#E6E8EB</color>>
+
+    <color name="teal_200">#FF03DAC5</color>
 </resources>
