6-ый итоговый commit созданы стили, ночная/дневная темы

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginHorizontal">@dimen/textview_margin</item>
+        <item name="android:minHeight">36dp</item>
         <item name="android:drawablePadding">16dp</item>
         <item name="android:layout_marginTop">@dimen/button_margin</item>
         <item name="android:gravity">center_vertical</item>
