7-ой commit Теперь все в 1 стиле, разведено на разные файлы цветов Исправлены мелкие "баги"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Main_layoutVertical"
-    android:background="@color/YP_Blue"
+    android:background="@color/MainBackground"
     >
     <TextView
         android:text="@string/app_name"
