--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/btnBack"
+            style="@style/Header_txtViewStyle"
+            android:text="@string/searchText"
+            app:drawableStartCompat="@drawable/back_icon" />
+
+
+        <EditText
+            android:id="@+id/edtxtSearch"
+            android:inputType="text"
+            app:drawableStartCompat="@drawable/search_icon"
+            app:endIconMode="clear_text"
+            style="@style/Search_editViewStyle"/>
+    </LinearLayout>
+
+</LinearLayout>
