--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,13 @@
     <dimen name="button_cornerRadius">16dp</dimen>
     <dimen name="button_margin">16dp</dimen>
     <dimen name="button_padding">16dp</dimen>
-    <dimen name="setting_text_size">16sp</dimen>
+    <dimen name="setting_textSize">16sp</dimen>
     <dimen name="textview_margin">16dp</dimen>
+    <dimen name="textview_padding">16dp</dimen>
+    <dimen name="editview_margin">16dp</dimen>
+    <dimen name="editview_padding">16dp</dimen>
     <dimen name="headtext_size">24sp</dimen>
+    <dimen name="search_cornerRadius">8dp</dimen>
+    <dimen name="drawable_padding">16dp</dimen>
+    <dimen name="search_textSize">16dp</dimen>
 </resources>
