--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name = "Main_btnStyle">
+    <style name = "Main_btnStyle" parent = "Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:padding">@dimen/button_margin</item>
@@ -35,14 +35,20 @@
         <item name="android:drawableTint">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
     </style>
+    <style name = "Header_btnBackStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">start|center_vertical</item>
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
+    </style>
     <style name = "Settings_txtViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginVertical">@dimen/textview_margin</item>
+        <item name="android:layout_marginVertical">12dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">@dimen/setting_textSize</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
-        <item name="android:drawableTint">@color/IconTint</item>
+        <item name="android:drawableTint">@color/Icon_Tint</item>
         <item name ="fontFamily">@font/ys_display_regular</item>
     </style>
     <style name = "Settings_txtViewWithSwitchStyle">
@@ -70,9 +76,9 @@
         <item name="android:minHeight">36dp</item>
         <item name="android:drawablePadding">@dimen/drawable_padding</item>
         <item name="android:textSize">@dimen/search_textSize</item>
-        <item name="android:textColor">@color/SearchTextColor</item>
-        <item name="android:hint">@string/searchHint</item>
-        <item name="android:textColorHint">@color/SearchHintColor</item>
+        <item name="android:textColor">@color/Search_Text_Color</item>
+        <item name="android:hint">@string/search_hint</item>
+        <item name="android:textColorHint">@color/Search_Hint_Color</item>
         <item name="android:maxLines">1</item>
         <item name="fontFamily">@font/ys_display_regular</item>
     </style>
