--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,11 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name = "Main_btnStyle" parent = "Widget.MaterialComponents.Button.UnelevatedButton">
+    <style name = "Main_btnStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:padding">@dimen/button_margin</item>
-        <item name="android:layout_margin">@dimen/button_padding</item>
+        <item name="android:layout_marginVertical">8dp</item>
+        <item name="android:layout_marginHorizontal">16dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/YP_Black</item>
@@ -19,6 +19,8 @@
         <item name="cornerRadius">@dimen/button_cornerRadius</item>
         <item name="iconGravity">textStart</item>
         <item name="iconTint">@color/YP_Black</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetTop">0dp</item>
         <item name="fontFamily">@font/ys_display_medium</item>
     </style>
     <style name = "Header_txtViewStyle">
@@ -40,6 +42,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">start|center_vertical</item>
         <item name="android:backgroundTint">?attr/colorPrimary</item>
+        <item name="tint">?attr/colorOnPrimary</item>
     </style>
     <style name = "Settings_txtViewStyle">
         <item name="android:layout_width">match_parent</item>
@@ -54,7 +57,6 @@
     <style name = "Settings_txtViewWithSwitchStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">@dimen/setting_textSize</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
@@ -62,13 +64,13 @@
     <style name = "Settings_switchStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center_vertical</item>
         <item name="android:thumbTint">@color/Switch_thumb</item>
         <item name="android:trackTint">@color/Switch_track</item>
         <item name="fontFamily">@font/ys_display_medium</item>
     </style>
     <style name = "Search_editViewStyle">
         <item name="android:layout_width">match_parent</item>
+        <item name="tint">?attr/colorOnPrimary</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/search_shape</item>
         <item name="android:layout_margin">@dimen/editview_margin</item>
@@ -79,6 +81,7 @@
         <item name="android:textColor">@color/Search_Text_Color</item>
         <item name="android:hint">@string/search_hint</item>
         <item name="android:textColorHint">@color/Search_Hint_Color</item>
+        <item name="android:drawableTint">@color/Search_Hint_Color</item>
         <item name="android:maxLines">1</item>
         <item name="fontFamily">@font/ys_display_regular</item>
     </style>
