--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -29,18 +29,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/textview_margin"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
                 style="@style/Settings_txtViewWithSwitchStyle"
                 android:layout_weight="1"
+                android:layout_marginVertical="21dp"
                 android:text="@string/dark_theme_text" />
 
             <Switch
                 android:id="@+id/switchDayNight"
                 style="@style/Settings_switchStyle"
                 android:layout_weight="3"
+                android:layout_marginVertical="21dp"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         </LinearLayout>
