--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <style name="Main_layoutVertical">
+    <style name="MainLayoutVertical">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name = "Main_btnStyle">
+    <style name = "MainBtnStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_marginVertical">8dp</item>
@@ -15,69 +15,67 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/YP_Black</item>
+        <item name="android:textSize">@dimen/head_text_size</item>
         <item name="backgroundTint">@color/YP_White</item>
-        <item name="cornerRadius">@dimen/button_cornerRadius</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
         <item name="iconGravity">textStart</item>
         <item name="iconTint">@color/YP_Black</item>
         <item name="android:insetBottom">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="fontFamily">@font/ys_display_medium</item>
     </style>
-    <style name = "Header_txtViewStyle">
+    <style name = "HeaderTextViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginHorizontal">@dimen/textview_margin</item>
-        <item name="android:layout_marginVertical">@dimen/textview_margin</item>
-        <item name="android:minHeight">48dp</item>
-        <item name="android:drawablePadding">16dp</item>
-        <item name="android:layout_marginTop">@dimen/button_margin</item>
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:textSize">@dimen/headtext_size</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">12dp</item>
+        <item name="android:paddingStart">@dimen/textview_margin</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textSize">@dimen/head_text_size</item>
         <item name="android:drawableTint">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_medium</item>
     </style>
-    <style name = "Header_btnBackStyle">
+    <style name = "HeaderBtnBackStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">start|center_vertical</item>
         <item name="android:backgroundTint">?attr/colorPrimary</item>
         <item name="tint">?attr/colorOnPrimary</item>
     </style>
-    <style name = "Settings_txtViewStyle">
+    <style name = "SettingsTextViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginVertical">18dp</item>
+        <item name="android:layout_marginBottom">18dp</item>
+        <item name="android:layout_marginTop">19dp</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:textSize">@dimen/setting_textSize</item>
+        <item name="android:textSize">@dimen/setting_text_size</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:drawableTint">@color/Icon_Tint</item>
         <item name ="fontFamily">@font/ys_display_regular</item>
     </style>
-    <style name = "Settings_txtViewWithSwitchStyle">
+    <style name = "SettingsTextViewWithSwitchStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/setting_textSize</item>
+        <item name="android:textSize">@dimen/setting_text_size</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
-        <item name="fontFamily">@font/ys_display_medium</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
     </style>
-    <style name = "Settings_switchStyle">
+    <style name = "SettingsSwitchStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:thumbTint">@color/Switch_thumb</item>
         <item name="android:trackTint">@color/Switch_track</item>
         <item name="fontFamily">@font/ys_display_medium</item>
     </style>
-    <style name = "Search_editViewStyle">
+    <style name = "SearchEditViewStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="tint">?attr/colorOnPrimary</item>
+        <item name="tint">@color/Search_Hint_Color</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/search_shape</item>
         <item name="android:layout_margin">@dimen/editview_margin</item>
         <item name="android:paddingHorizontal">@dimen/editview_padding</item>
         <item name="android:minHeight">36dp</item>
-        <item name="android:drawablePadding">@dimen/drawable_padding</item>
-        <item name="android:textSize">@dimen/search_textSize</item>
+        <item name="android:textSize">@dimen/regular_text_size</item>
         <item name="android:textColor">@color/Search_Text_Color</item>
         <item name="android:hint">@string/search_hint</item>
         <item name="android:textColorHint">@color/Search_Hint_Color</item>
