--- a/app/src/main/res/layout/track_list.xml
+++ b/app/src/main/res/layout/track_list.xml
@@ -3,93 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/coverAlbum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start|center_vertical"
-        android:layout_marginVertical="8dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginEnd="8dp"
-        android:layout_weight="2"
+        android:layout_width="@dimen/cover_size"
+        android:layout_height="@dimen/cover_size"
+        android:layout_marginVertical="@dimen/margin_8dp"
+        android:layout_marginStart="@dimen/margin_13dp"
+        android:layout_marginEnd="@dimen/margin_8dp"
+        android:layout_weight="1"
         app:srcCompat="@drawable/place_holder_img" />
 
     <LinearLayout
         android:id="@+id/trackInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="14dp"
-        android:layout_weight="1"
+        android:layout_marginVertical="@dimen/margin_14dp"
+        android:layout_weight="50"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/trackNameTextView"
-            android:layout_width="wrap_content"
+            style="@style/TrackNameTextView"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/ys_display_regular"
-            android:maxLines="1"
-            android:textColor="?attr/colorOnPrimary"
-            android:textSize="@dimen/regular_text_size"
+            android:layout_width="match_parent"
             tools:text="Большое и длинное название песни" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
 
             <TextView
                 android:id="@+id/artistNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_weight="1"
-                android:fontFamily="@font/ys_display_regular"
-                android:minWidth="13dp"
-                android:minHeight="13dp"
-                android:textColor="@color/YP_Grey"
-                android:textSize="@dimen/small_text_size"
+                style="@style/TrackInfoTextView"
+                app:drawableEndCompat="@drawable/tactical_dot_ico"
                 tools:text="Исполнитель" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:minWidth="13dp"
-                android:minHeight="13dp"
-                app:srcCompat="@drawable/tactical_dot_ico" />
 
             <TextView
                 android:id="@+id/durationTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center_horizontal"
-                android:layout_weight="1"
-                android:fontFamily="@font/ys_display_regular"
-                android:minWidth="13dp"
-                android:minHeight="13dp"
-                android:textColor="@color/YP_Grey"
-                android:textSize="@dimen/small_text_size"
+                style="@style/TrackInfoTextView"
                 tools:text="Время" />
         </LinearLayout>
 
 
     </LinearLayout>
 
-    <ImageButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginVertical="8dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginEnd="8dp"
-        android:layout_weight="2"
-        android:textColor="@color/YP_Grey"
-        app:srcCompat="@drawable/arrowright_icon"
+    <ImageView
+        android:layout_width="@dimen/image_size"
+        android:layout_height="@dimen/image_size"
+        android:layout_gravity="center"
+        android:layout_marginVertical="@dimen/margin_19dp"
+        android:layout_marginStart="@dimen/margin_8dp"
+        android:layout_marginEnd="@dimen/margin_12dp"
+        android:layout_weight="1"
+        android:src="@drawable/arrowright_icon"
 
         />
 
