--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,13 @@
     <dimen name="drawable_padding">16dp</dimen>
     <dimen name="search_text_size">16dp</dimen>
     <dimen name="header_margin">4dp</dimen>
+    <dimen name="margin_12dp">12dp</dimen>
+    <dimen name="margin_13dp">13dp</dimen>
+    <dimen name="margin_14dp">13dp</dimen>
+    <dimen name="margin_18dp">18dp</dimen>
+    <dimen name="margin_19dp">19dp</dimen>
     <dimen name="margin_21dp">21dp</dimen>
+    <dimen name="cover_size">45dp</dimen>
+    <dimen name="image_size">24dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
 </resources>
