--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,4 +84,22 @@
         <item name="android:maxLines">1</item>
         <item name="fontFamily">@font/ys_display_regular</item>
     </style>
+
+    <style name="TrackNameTextView">
+        <item name="android:textSize">@dimen/regular_text_size</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="TrackInfoTextView">
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">@color/Track_List_Under_Name_Color</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="iconTint">@color/Track_List_Under_Name_Color</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
 </resources>
