--- a/app/src/main/res/layout/track_list.xml
+++ b/app/src/main/res/layout/track_list.xml
@@ -13,15 +13,14 @@
         android:layout_marginVertical="@dimen/margin_8dp"
         android:layout_marginStart="@dimen/margin_13dp"
         android:layout_marginEnd="@dimen/margin_8dp"
-        android:layout_weight="1"
         app:srcCompat="@drawable/place_holder_img" />
 
     <LinearLayout
         android:id="@+id/trackInfo"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/margin_14dp"
-        android:layout_weight="50"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -64,7 +63,6 @@
         android:layout_marginVertical="@dimen/margin_19dp"
         android:layout_marginStart="@dimen/margin_8dp"
         android:layout_marginEnd="@dimen/margin_12dp"
-        android:layout_weight="1"
         android:src="@drawable/arrowright_icon"
 
         />
