--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,6 +3,7 @@
     <color name="YP_White">#FFFFFFFF</color>
     <color name="YP_Black">#1A1B22</color>
     <color name="YP_Blue">#3772E7</color>
+    <color name="YP_Yellow">#FCD452</color>
     <color name="YP_BlueLight">#9FBBF3</color>
     <color name="YP_Grey">#AEAFB4</color>>
     <color name="YP_GreyLight">#E6E8EB</color>>
@@ -15,4 +16,5 @@
     <color name="Search_Hint_Color">@color/YP_Black</color>
     <color name="Track_List_Name_color">@color/YP_White</color>
     <color name="Track_List_Under_Name_Color">@color/YP_White</color>
+    <color name="Error_Search_Icon">@color/YP_White</color>
 </resources>
