--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,11 +9,13 @@
     <dimen name="editview_margin">16dp</dimen>
     <dimen name="editview_padding">16dp</dimen>
     <dimen name="head_text_size">26sp</dimen>
-    <dimen name="regular_text_size">19sp</dimen>
+    <dimen name="text_size_19sp">19sp</dimen>
     <dimen name="small_text_size">13sp</dimen>
     <dimen name="text_size_11sp">11sp</dimen>
+    <dimen name="text_size_14sp">14sp</dimen>
     <dimen name="text_size_16sp">16sp</dimen>
     <dimen name="search_corner_radius">8dp</dimen>
+    <dimen name="refresh_corner_radius">54dp</dimen>
     <dimen name="drawable_padding">16dp</dimen>
     <dimen name="search_text_size">16dp</dimen>
     <dimen name="header_margin">4dp</dimen>
@@ -26,4 +28,5 @@
     <dimen name="cover_size">45dp</dimen>
     <dimen name="image_size">24dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_24dp">24dp</dimen>
 </resources>
