--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name = "MainBtnStyle">
+    <style name="MainBtnStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_marginVertical">8dp</item>
@@ -76,11 +76,13 @@
         <item name="android:drawablePadding">6dp</item>
         <item name="android:paddingHorizontal">@dimen/editview_padding</item>
         <item name="android:minHeight">36dp</item>
-        <item name="android:textSize">@dimen/regular_text_size</item>
+        <item name="android:textSize">@dimen/text_size_19sp</item>
         <item name="android:textColor">@color/Search_Text_Color</item>
         <item name="android:hint">@string/search_hint</item>
         <item name="android:textColorHint">@color/Search_Hint_Color</item>
         <item name="android:drawableTint">@color/Search_Hint_Color</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="android:singleLine">true</item>
         <item name="android:maxLines">1</item>
         <item name="fontFamily">@font/ys_display_regular</item>
     </style>
@@ -102,4 +104,25 @@
         <item name="android:maxLines">1</item>
     </style>
 
+    <style name="EmptyTrackListTextView">
+        <item name="android:textSize">@dimen/text_size_19sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
+
+    <style name="BadInternetConnectyionTextView">
+        <item name="android:textSize">@dimen/text_size_19sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:minLines">3</item>
+    </style>
+
+    <style name="refreshSearchButton">
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/refresh_shape</item>
+    </style>
 </resources>
