--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     style="@style/MainLayoutVertical">
 
     <LinearLayout
@@ -31,42 +30,40 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/textview_margin"
-            android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 style="@style/SettingsTextViewWithSwitchStyle"
                 android:layout_weight="1"
-                android:layout_marginVertical="@dimen/margin_21dp"
+                android:layout_gravity="center"
                 android:text="@string/dark_theme_text" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/switchDayNight"
                 style="@style/SettingsSwitchStyle"
-                android:layout_weight="3"
-                android:layout_marginVertical="@dimen/margin_21dp"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/btnShare"
             style="@style/SettingsTextViewStyle"
-            android:layout_weight="1"
             android:text="@string/share_text"
             app:drawableEndCompat="@drawable/shareapp_icon" />
 
         <TextView
             android:id="@+id/btnSupport"
             style="@style/SettingsTextViewStyle"
-            android:layout_weight="1"
             android:text="@string/techsupport_text"
             app:drawableEndCompat="@drawable/techsupport_icon" />
 
         <TextView
             android:id="@+id/btnLicense"
             style="@style/SettingsTextViewStyle"
-            android:layout_weight="1"
             android:text="@string/license_text"
             app:drawableEndCompat="@drawable/arrowright_icon" />
 
