--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,5 @@
     <dimen name="image_size">24dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="margin_24dp">24dp</dimen>
+    <dimen name="cursor_width">2px</dimen>
 </resources>
