--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,18 +54,13 @@
         <item name ="fontFamily">@font/ys_display_regular</item>
     </style>
     <style name = "SettingsTextViewWithSwitchStyle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/setting_text_size</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="fontFamily">@font/ys_display_regular</item>
     </style>
-    <style name = "SettingsSwitchStyle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:thumbTint">@color/Switch_thumb</item>
-        <item name="android:trackTint">@color/Switch_track</item>
-        <item name="fontFamily">@font/ys_display_medium</item>
+    <style name="SettingsSwitchStyle">
+        <item name="thumbTint">@color/Switch_thumb</item>
+        <item name="trackTint">@color/Switch_track</item>
     </style>
     <style name = "SearchEditViewStyle">
         <item name="android:layout_width">match_parent</item>
