--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,16 +24,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:paddingHorizontal="@dimen/button_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/textview_margin"
+            android:layout_marginTop="@dimen/margin_21dp"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="@dimen/empty_dp"
                 android:layout_height="wrap_content"
                 style="@style/SettingsTextViewWithSwitchStyle"
                 android:layout_weight="1"
