--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,4 +120,42 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:background">@drawable/refresh_shape</item>
     </style>
+
+    <style name="PlayerTrackInfoTextView">
+        <item name="android:textSize">@dimen/text_size_13sp</item>
+        <item name="android:textColor">@color/YP_Grey</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="PlayerTrackLabelTextView">
+        <item name="android:textSize">@dimen/text_size_13sp</item>
+        <item name="android:textColor">@color/YP_Grey</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="PlayerDurationTextView">
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="PlayerTrackNameTextView">
+        <item name="android:textSize">@dimen/text_size_22sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
 </resources>
